...
  onClose,
  value,
  title,
  discription,
  InputLabel,
  inputType = 'text',
  twoInput = false,
  twoInputLabel = '',
  twoValue = '',
  twoInputType = 'text',
  isPending = false,
  pendingText,
}: TextInputModalProps) => {
...
        <DialogHeader>
          <DialogTitle>{title}</DialogTitle>
          <DialogDescription>{discription}</DialogDescription>
        </DialogHeader>
        <View className="gap-4">
          <View className="gap-3">
            <Label htmlFor="primaryInput">{InputLabel}</Label>
            <Input
              nativeID="primaryInput"
              testID="primaryInput"
              defaultValue={value}
              onChangeText={(text) => {
                inputTextRef.current = text;
...
